fixed resizing of login/signup page on mobile and various devices

--- a/src/app/auth/log-in/log-in.component.css
+++ b/src/app/auth/log-in/log-in.component.css
@@ -68,3 +68,9 @@ label {
     display: block;
   }
 }
+
+@media only screen and (max-height: 700px) {
+  form {
+    height: 90vh;
+  }
+}
